feat: Email integration with mailtrap
