# app.js
@@ -4,11 +4,16 @@ const helmet = require('helmet');
 const morgan = require('morgan');
 const swaggerUi = require('swagger-ui-express');
 const YAML = require('yamljs');
+const path = require("path");
+
 const bookingRoutes = require('./routes/bookingRoutes'); // will create later
 
 const authRoutes = require('./routes/authRoutes');
 const adminRoutes = require('./routes/adminRoutes');
 const userRoutes = require('./routes/userRoutes');
+const uploadRoutes = require('./routes/uploadRoutes');
+
+const apiLimiter = require('./middlewares/rateLimiter');
 
 const app = express();
 
@@ -17,6 +22,7 @@ app.use(cors());
 app.use(helmet());
 app.use(morgan('dev'));
 app.use(express.json());
+app.use(apiLimiter);
 
 // Swagger Docs
 const swaggerDocument = YAML.load('./docs/swagger.yaml');
@@ -33,6 +39,11 @@ app.use('/api/bookings', bookingRoutes); // example route
 app.use('/api/admin', adminRoutes);
 
 app.use('/api/users', userRoutes);
+
+app.use('/api/upload', uploadRoutes);
+
+// Serve uploaded files statically
+app.use('/uploads', express.static(path.join(__dirname, '/uploads')));
 
 
 app.get('/', (req, res) => {
